# musicdl

./: .gitignore  Cargo.toml  README.md
client/: note.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
client/src/app/: page.tsx
client/src/app/login/: page.tsx
client/src/app/register/: page.tsx
client/src/utils/: constants.ts  validation.ts
client/tests/: index.test.ts
common/: Cargo.toml
common/src/: api.rs  helpers.rs  lib.rs  models.rs
musicdl/: Cargo.toml
musicdl/src/: main.rs
web/: Cargo.toml  README.md
web/src/: main.rs
web/src/db/: models.rs
web/src/db/dao/: mod.rs  playlist.rs  session.rs  song.rs  user.rs
web/src/middlewares/: auth.rs
web/src/models/: auth.rs
web/src/routes/: login.rs  mod.rs  playlist.rs  song.rs  user.rs
web/src/schema/: mod.rs  playlist.rs  song.rs  user.rs
web/src/sql/: ddl.sql
web/src/utils/: idgen.rs  mod.rs  password.rs  tokens.rs
