[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
openssl = { version = "0.10.56", features = ["vendored"] }
reqwest = "0.11.20"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"
