[package]
name = "musicdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
clap = { version = "4.4.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
indicatif = "0.17.6"

