[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.1"
common = { path = "../common"}
hex = "0.4.3"
lettre = "0.10.4"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
sqlx = "0.7.1"
thiserror = "1.0.47"
tracing = "0.1.37"
uuid = "1.4.1"

