[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "4.3.1"
anyhow = "1.0.75"
argon2 = "0.5.1"
chrono = { version = "0.4.28", features = ["serde"] }
common = { path = "../common"}
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
lettre = "0.10.4"
nanoid = "0.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono"] }
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-actix-web = "0.7.6"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

